# anansi

./: Cargo.toml  LICENSE  README.md  anansi.toml  build.rs  setup_structure.sh
scripts/: emergency_kill.sh  install.sh
src/: core.rs  deception.rs  defense.rs  kernel.rs  main.rs
