[package]
name = "anansi"
version = "1.0.0"
edition = "2021"
authors = ["Anonymous"]
description = "ANANSI - Adaptive Neuromorphic Anomaly Network for Systemic Infiltration"
license = "GPL-3.0"

[[bin]]
name = "anansi"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
ring = "0.17"
libc = "0.2"
nix = { version = "0.27", features = ["user", "process", "signal"] }
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0